Start updating to Highstock for their navigation bar

--- a/baseTemplate.html
+++ b/baseTemplate.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>Akamai Query Visualization Tool</title>
 <script src="/static/jquery/jquery.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://code.highcharts.com/highcharts.js"></script>
+<!-- <script src="http://code.highcharts.com/highcharts.js"></script> -->
+<script src="http://code.highcharts.com/stock/highstock.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
+<!-- <script src="/static/annotations/js/ann"></script> -->
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/dashboard.css">
 {% comment Almost all our pages have graphs anyway so include these. Consider pages that don't need them too. %}
 {% block extra_scripts %}{% end %}
-<title>Akamai Query Visualization Tool</title>
-</head>
+
+<!-- </head>
 <body>
+ -->
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="/dashboard/">Akamai Query Visualization Tool</a>
+			<a class="navbar-brand" href="/home/">Akamai Query Visualization Tool</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/dashboard/">Dashboard</a></li>
-				<li><a href="/threadstats/">Thread Statistics</a></li>
-				<li><a href="/versionstats/">Version Statistics</a></li>
-				<li><a href="/sqlstats/">SQL Query Statistics</a></li>
+				<li class = "btn"><button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				    Choose Pipeline to Query <span class="caret"></span>
+				</button><ul class="dropdown-menu" role="menu">
+					<li><a href="/dashboard/">Decoded Logs (DEC)</a></li>
+					<li><a href="/threadstats/">Thread Statistics (TST)</a></li>
+					<li><a href="/versionstats/">Version Statistics (VER)</a></li>
+					<li><a href="/sqlstats/">Query Statistics (SQL and GOT)</a></li>
+					<li><a href="/mergestats/">Table Merges (MRG)</a></li>
+				</ul></li>
+				<li><a href="/ImpalaQueries/">Impala Query</a></li>
+				<li><a href="/home/">About</a></li>
 			</ul>
 		</div>
 	</div>
