--- a/versionstats.html
+++ b/versionstats.html
@@ -8,10 +8,9 @@
 	<div class="row">
 		<div class="col-sm-7 col-md-7 main chart_container main_chart_container" width ="100%">
 		{% comment Here goes the main graph (main feed) %}
-			<h1 class="page-header">Query2 Generation Interval Over Time</h1>
+			<h1 class="page-header">Version Statistics Over Time</h1>
 			<p>This data is pulled from the <a href = 'https://docs.akamai.com/syscomm/query/internal/design/DDC-parser-query/LogFeatureMapping.html'> VER pipeline</a>, which is logged out after the process of merging the tables at the node is complete in every Query generation cycle. This is when the Query2 logs are rotated if the rotate log signal was sent from akarotate.</p>
 			<div id="feed_main_chart"  style="min-width: 310px; height: 400px; margin: 0 auto; overflow: scroll;"></div>
-			<p font size="5"><span id = "queryStatement"> The select statement goes here: </span></p>
 		</div>
 		<div class="col-sm-5 col-md-5 main">
 			<h1>Query Settings</h1>
