Removed timestamp input, added AppBattery bundles

--- a/baseTemplate.html
+++ b/baseTemplate.html
@@ -7,7 +7,7 @@
 <!-- <script src="http://code.highcharts.com/highcharts.js"></script> -->
 <script src="http://code.highcharts.com/stock/highstock.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
-<!-- <script src="/static/annotations/js/ann"></script> -->
+<script src="/static/annotations/js/annotations.js"></script>
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/dashboard.css">
 {% comment Almost all our pages have graphs anyway so include these. Consider pages that don't need them too. %}
@@ -34,7 +34,7 @@
 					<li><a href="/mergestats/">Table Merges (MRG)</a></li>
 				</ul></li>
 				<li><a href="/ImpalaQueries/">Impala Query</a></li>
-				<li><a href="/home/">About</a></li>
+			<!-- 	<li><a href="/home/">About</a></li> -->
 			</ul>
 		</div>
 	</div>
