Added flags, websockets, and moved features from dec.js to all other js files

--- a/sqlstats.html
+++ b/sqlstats.html
@@ -1,6 +1,6 @@
 {% extends "baseTemplate.html" %}
 {% block extra_scripts %}
-<script src="/static/lighthouse/js/alerts.js"></script>
+<!-- <script src="/static/lighthouse/js/alerts.js"></script> -->
 {% end %}
 {% block content %}
 
@@ -55,7 +55,6 @@
 {% block footer_scripts %}
 
 <script src="/static/query/sql.js"></script>
-<script src="/static/lighthouse/js/network.js"></script>
 {% comment This makes the page load faster. Faster loading is good. %}
 	<script src="/static/lighthouse/js/misc.js"></script>
 {% end %}
