--- a/threadstats.html
+++ b/threadstats.html
@@ -1,6 +1,6 @@
 {% extends "baseTemplate.html" %}
 {% block extra_scripts %}
-<script src="/static/lighthouse/js/alerts.js"></script>
+<!-- <script src="/static/lighthouse/js/alerts.js"></script> -->
 {% end %}
 {% block content %}
 
@@ -59,7 +59,7 @@
 
 <!-- <link type="text/css" rel="stylesheet" href="/static/query/tst.css"> -->
 <script src="/static/query/tst.js"></script>
-<script src="/static/lighthouse/js/network.js"></script>
+<!-- <script src="/static/lighthouse/js/network.js"></script> -->
 {% comment This makes the page load faster. Faster loading is good. %}
 	<script src="/static/lighthouse/js/misc.js"></script>
 {% end %}
