--- a/baseTemplate.html
+++ b/baseTemplate.html
@@ -8,6 +8,7 @@
 <script src="http://code.highcharts.com/stock/highstock.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
 <script src="/static/query/annotations.js"></script>
+<script src="/static/query/streaming.js"></script>
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/dashboard.css">
 {% comment Almost all our pages have graphs anyway so include these. Consider pages that don't need them too. %}
