--- a/versionstats.html
+++ b/versionstats.html
@@ -1,6 +1,5 @@
 {% extends "baseTemplate.html" %}
 {% block extra_scripts %}
-<script src="/static/lighthouse/js/alerts.js"></script>
 {% end %}
 {% block content %}
 
@@ -58,7 +57,7 @@
 {% end %}
 {% block footer_scripts %}
 <script src="/static/query/ver.js"></script>
-<script src="/static/lighthouse/js/network.js"></script>
+<!-- <script src="/static/lighthouse/js/network.js"></script> -->
 {% comment This makes the page load faster. Faster loading is good. %}
 	<script src="/static/lighthouse/js/misc.js"></script>
 {% end %}
