--- a/mergestats.html
+++ b/mergestats.html
@@ -17,37 +17,27 @@
 			<p>Type in the Network and Domain boxes to narrow down the list of possible aggsets, and select the field you want to limit your query by. To limit by host or client name, type the value in the text field as full_name or partial_name*.</p>
 			<p>Queries may take over 30 seconds to render, so please be patient!</p>
 			<p>
-			  <div id="option_inputs" column-count:"4">
-			    <form id = "span" style = "position: relative; float: left; width: 33%;">
+			  <div id="option_inputs" column-count:"2">
+			    <form id = "span" style = "position: relative; float: left; width: 50%;">
 			    <!--    <p><input type="text" id="nrwr" onkeyup="narrow(this.value)" size="12"></p> -->
-			        <p><input type="text" id="nrwr" placeholder = "Network" size="12"></p>
+			        <p><input type="text" id="nrwr" class="form-control" placeholder = "Network" size="12"></p>
 			        <p>
 			            <span id="spanMatches"></span><br>
-			            <select id="spanNames" multiple size="5"></select>
+			            <select id="spanNames" class="form-control" multiple size="5"></select>
 			        </p>
 			    </form>
-			  	<form id = "domain" style = "position: relative; float: left; width: 33%;">
-			        <p><input type="text" id="nrwr2" placeholder = "Domain" size="12"></p>
+			  	<form id = "domain" style = "position: relative; float: left; width: 50%;">
+			        <p><input type="text" id="nrwr2" class="form-control" placeholder = "Domain" size="12"></p>
 			        <p>
 			            <span id="domainMatches"></span><br>
-			            <select id="domainNames" multiple size="5"></select>
+			            <select id="domainNames" class="form-control" multiple size="5"></select>
 			        </p>
-			    </form>
-			  	<form id = "other" style = "position: relative; float: left; width: 33%;">
 			    </form>
 			  </div>
 			</p>
+			<div class="col-sm-12 col-md-12" id="other"></div>
 			<div class="col-sm-6 col-md-6" id="button_div"></div>
 		</div>
-	</div>
-	<div class="row">
-		{% for feed_index in [1,2,3] %}
-			<div class="col-sm-4 col-md-4 main chart_container sub_{{feed_index}}_chart_container">
-				<h3 class="page-header">Feed {{feed_index}}</h3>
-				<div class="y_axis" id="feed_{{feed_index}}_y_axis"></div>
-				<div class="chart" id="feed_{{feed_index}}_chart" float="left"></div>
-			</div>
-		{% end %}
 	</div>
 </div>
 {% end %}
