--- a/threadstats.html
+++ b/threadstats.html
@@ -19,24 +19,24 @@
 			<p>
 			  <div id="option_inputs" column-count:"3">
 			    <form id = "span" style = "position: relative; float: left; width: 33%;">
-			        <p><input type="text" id="nrwr" placeholder = "Network" size="12"></p>
+			        <p><input type="text" id="nrwr" class="form-control" placeholder = "Network" size="12"></p>
 			        <p>
 			            <span id="spanMatches"></span><br>
-			            <select id="spanNames" multiple size="5"></select>
+			            <select id="spanNames" class="form-control" multiple size="5"></select>
 			        </p>
 			    </form>
 			  	<form id = "domain" style = "position: relative; float: left; width: 33%;">
-			        <p><input type="text" id="nrwr2" placeholder = "Domain" size="12"></p>
+			        <p><input type="text" id="nrwr2" class="form-control" placeholder = "Domain" size="12"></p>
 			        <p>
 			            <span id="domainMatches"></span><br>
-			            <select id="domainNames" multiple size="5"></select>
+			            <select id="domainNames" class="form-control" multiple size="5"></select>
 			        </p>
 			    </form>
 			  	<form id = "thread" style = "position: relative; float: left; width: 33%;">
-			  		<p><input type="text" id="nrwr3" placeholder = "Thread" size="12"></p>
+			  		<p><input type="text" id="nrwr3" class="form-control" placeholder = "Thread" size="12"></p>
 			        <p>
 			            <span id="threadMatches"></span><br>
-			            <select id="threadNames" multiple size="5"></select>
+			            <select id="threadNames" class="form-control" multiple size="5"></select>
 			        </p>
 			    </form>
 			  </div>
