--- a/baseTemplate.html
+++ b/baseTemplate.html
@@ -7,7 +7,7 @@
 <!-- <script src="http://code.highcharts.com/highcharts.js"></script> -->
 <script src="http://code.highcharts.com/stock/highstock.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
-<script src="/static/query/annotations.js"></script>
+<script src="/static/query/pipeline.js"></script>
 <script src="/static/query/streaming.js"></script>
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/dashboard.css">
