--- a/baseTemplate.html
+++ b/baseTemplate.html
@@ -3,10 +3,9 @@
 <head>
 <title>Akamai Query Visualization Tool</title>
 <script src="/static/jquery/jquery.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js"></script>
 <!-- <script src="http://code.highcharts.com/highcharts.js"></script> -->
-<script src="http://code.highcharts.com/stock/highstock.js"></script>
-<script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/stock/highstock.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="/static/query/pipeline.js"></script>
 <script src="/static/query/streaming.js"></script>
 <link type="text/css" rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
