--- a/baseTemplate.html
+++ b/baseTemplate.html
@@ -27,7 +27,7 @@
 				<li class = "btn"><button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				    Choose Pipeline to Query <span class="caret"></span>
 				</button><ul class="dropdown-menu" role="menu">
-					<li><a href="/dashboard/">Decoded Logs (DEC)</a></li>
+					<li><a href="/decstats/">Decoded Logs (DEC)</a></li>
 					<li><a href="/threadstats/">Thread Statistics (TST)</a></li>
 					<li><a href="/versionstats/">Version Statistics (VER)</a></li>
 					<li><a href="/sqlstats/">Query Statistics (SQL and GOT)</a></li>
